[package]
name = "winio-loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
memflow = "0.2.3"
memflow-win32 = "0.2.0"
memflow-winio = { git = "https://github.com/a2x/memflow-winio" }
rayon = "1.10.0"

[dependencies.windows]
version = "0.61.1"
features = ["Win32_System", "Win32_System_Services"]
