[package]
name = "winio-loader"
version = "1.0.0"
authors = ["Alice42069"]
repository = "https://github.com/Alice42069/winio-loader"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
memflow = "0.2.3"
memflow-win32 = "0.2.0"
memflow-winio = { git = "https://github.com/a2x/memflow-winio" }
memflow-vdm = { git = "https://github.com/a2x/memflow-vdm" }
thiserror = "2.0.12"
